--- a/dotNET/Source/SA/RFmx SpecAn/RFmx SpecAn.csproj
+++ b/dotNET/Source/SA/RFmx SpecAn/RFmx SpecAn.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RFmx_SpecAn</RootNamespace>
-    <AssemblyName>RFmx SpecAn</AssemblyName>
+    <AssemblyName>NationalInstruments.ReferenceDesignLibraries.RFmxSpecAn</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -25,7 +25,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\..\..\Builds\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
