--- a/dotNET/Source/SG/SG.csproj
+++ b/dotNET/Source/SG/SG.csproj
@@ -56,6 +56,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="SG.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
