--- a/dotNET/Source/Supply/Supply.csproj
+++ b/dotNET/Source/Supply/Supply.csproj
@@ -50,6 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="Supply.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
