--- a/dotNET/Source/Example/Example.csproj
+++ b/dotNET/Source/Example/Example.csproj
@@ -31,7 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>NationalInstruments.ReferenceDesignLibraries.Examples.ScopeExample</StartupObject>
+    <StartupObject>NationalInstruments.ReferenceDesignLibraries.Examples.Digital_Example</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="NationalInstruments.Common, Version=17.5.40.49153, Culture=neutral, PublicKeyToken=dc6ad606294fc298, processorArchitecture=MSIL" />
@@ -41,6 +41,7 @@
     <Reference Include="NationalInstruments.ModularInstruments.NIDCPower.Fx45, Version=18.2.0.49152, Culture=neutral, PublicKeyToken=4febd62461bf11a4, processorArchitecture=MSIL">
       <Private>False</Private>
     </Reference>
+    <Reference Include="NationalInstruments.ModularInstruments.NIDigital.Fx45, Version=18.0.0.49152, Culture=neutral, PublicKeyToken=4febd62461bf11a4, processorArchitecture=MSIL" />
     <Reference Include="NationalInstruments.ModularInstruments.NIRfsg.Fx45, Version=18.1.0.49152, Culture=neutral, PublicKeyToken=4febd62461bf11a4, processorArchitecture=MSIL">
       <Private>False</Private>
     </Reference>
@@ -67,6 +68,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Digital Example.cs" />
     <Compile Include="SA.RFmxSpecAn Example.cs" />
     <Compile Include="Scope Example.cs" />
     <Compile Include="Supply Example.cs" />
@@ -75,6 +77,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Digital\Digital.csproj">
+      <Project>{a12f87e8-772d-4dd9-9ae1-e6a72e83f4fe}</Project>
+      <Name>Digital</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SA\RFmx SpecAn\RFmx SpecAn.csproj">
       <Project>{3d1bc0f6-273c-4a44-82f6-3bb933862ffb}</Project>
       <Name>RFmx SpecAn</Name>
@@ -95,6 +101,26 @@
       <Project>{6e38c48b-dd17-4438-9366-e336528e62ae}</Project>
       <Name>Supply</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Support Files\Pattern.digipat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Support Files\Pattern.digipatsrc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Support Files\PinLevels.digilevels">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Support Files\PinMap.pinmap">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Support Files\Specifications.specs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Support Files\Timing.digitiming">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
