Completed implementation of expanded triggering options for PA Enable control
#SG
- Split Waveform Timing into two structs: one to control the timing, and another to configure properties for PA enable
- Moved to building the script programmatically to make it easier to follow and better account for the different use cases
- Added a new function for aborting generation in order to have a single funciton to use to abort that would also account for disabling the PA in static EVM cases
- Added simple TimeToSamples function
- Added the AssemblyFileVersion attribute which will be used in subsequent commits to track major additions to individual modules from the RDL library

#SG Example
- Updated to implement newly designed functions

#SA Example
- Updated to implement newly designed functions

--- a/dotNET/Source/Example/Example.csproj
+++ b/dotNET/Source/Example/Example.csproj
@@ -31,7 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>NationalInstruments.ReferenceDesignLibraries.Examples.Digital_Example</StartupObject>
+    <StartupObject>NationalInstruments.ReferenceDesignLibraries.Examples.SGExample</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="NationalInstruments.Common, Version=17.5.40.49153, Culture=neutral, PublicKeyToken=dc6ad606294fc298, processorArchitecture=MSIL" />
@@ -103,6 +103,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Support Files\80211a_20M_48Mbps.tdms">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Support Files\Pattern.digipat">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
