--- a/Examples/Digital PAEN Control/Digital Dynamic PAEN Example/Digital Dynamic PAEN Example.csproj
+++ b/Examples/Digital PAEN Control/Digital Dynamic PAEN Example/Digital Dynamic PAEN Example.csproj
@@ -36,18 +36,6 @@
     <Reference Include="NationalInstruments.ModularInstruments.Common, Version=16.0.45.49152, Culture=neutral, PublicKeyToken=4febd62461bf11a4, processorArchitecture=MSIL" />
     <Reference Include="NationalInstruments.ModularInstruments.NIDigital.Fx45, Version=18.0.0.49152, Culture=neutral, PublicKeyToken=4febd62461bf11a4, processorArchitecture=MSIL" />
     <Reference Include="NationalInstruments.ModularInstruments.NIRfsg.Fx45, Version=18.1.0.49152, Culture=neutral, PublicKeyToken=4febd62461bf11a4, processorArchitecture=MSIL" />
-    <Reference Include="NationalInstruments.ReferenceDesignLibraries.Digital, Version=1.4.0.1, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Builds\NationalInstruments.ReferenceDesignLibraries.Digital.dll</HintPath>
-    </Reference>
-    <Reference Include="NationalInstruments.ReferenceDesignLibraries.DigitalProtocols.MIPI RFFE, Version=1.3.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Builds\NationalInstruments.ReferenceDesignLibraries.DigitalProtocols.MIPI RFFE.dll</HintPath>
-    </Reference>
-    <Reference Include="NationalInstruments.ReferenceDesignLibraries.SG, Version=1.3.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Builds\NationalInstruments.ReferenceDesignLibraries.SG.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -108,6 +96,16 @@
     <None Include="TDMS Files\11N_MCS0_20M.tdms">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Source\Digital\Digital.csproj">
+      <Project>{a12f87e8-772d-4dd9-9ae1-e6a72e83f4fe}</Project>
+      <Name>Digital</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Source\SG\SG.csproj">
+      <Project>{89abcac5-cedb-4535-bd58-e205a97834d9}</Project>
+      <Name>SG</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
