Removed specific versions from references
Visual Studio's default behavior is to add references with "Specific Version" checked. This is rather frustrating for someone trying to open the code and use it in a variety of supported driver versions, so this setting has been set to false for all modules. Future build validation will include this.

--- a/Source/Digital Protocols/MIPI RFFE/MIPI RFFE.csproj
+++ b/Source/Digital Protocols/MIPI RFFE/MIPI RFFE.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="NationalInstruments.ModularInstruments.NIDigital.Fx45, Version=18.0.0.49152, Culture=neutral, PublicKeyToken=4febd62461bf11a4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
