--- a/Source/SA/RFmx LTE/RFmxLTE.csproj
+++ b/Source/SA/RFmx LTE/RFmxLTE.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{1EB6F1AE-2EEA-4DC8-8CDB-09B5FADF2236}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NationalInstruments.ReferenceDesignLibraries.RFmxLTE</RootNamespace>
+    <RootNamespace>NationalInstruments.ReferenceDesignLibraries.SA</RootNamespace>
     <AssemblyName>NationalInstruments.ReferenceDesignLibraries.RFmxLTE</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
