--- a/Source/SA/DPD/DPD.csproj
+++ b/Source/SA/DPD/DPD.csproj
@@ -61,6 +61,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\SolutionInfo.cs">
+      <Link>SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="DPD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
