ADD: SelectedPorts parameter to SpecAN,NR,LTE,WLAN and SG for 583x ha… (#65)
* ADD: SelectedPorts parameter to SpecAN,NR,WLAN and SG for 583x hardware support

* CHANGE: update NI common assembly version to use specific 19.0

* CHANGE: adapt teststand sequence with respect to selectedPorts items

* CHANGE: adapt teststand sequence NR with respect to selectedPorts items

* CHANGE:    Source/SA/RFmx LTE/RFmxLTE.cs add selected Port support

* FIX: Referenced assemblies to not copy local

--- a/Source/Unit Tests/LTETests/LTETests.csproj
+++ b/Source/Unit Tests/LTETests/LTETests.csproj
@@ -46,7 +46,7 @@
       <HintPath>..\..\packages\MSTest.TestFramework.1.3.2\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="NationalInstruments.Common, Version=19.0.40.49152, Culture=neutral, PublicKeyToken=dc6ad606294fc298, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+      <Private>True</Private>
     </Reference>
     <Reference Include="NationalInstruments.RFmx.InstrMX.Fx40, Version=19.0.0.49152, Culture=neutral, PublicKeyToken=dc6ad606294fc298, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
