CHANGE: use SG.waveform for AMPM measurent CHANGE: merge carrierchannel and offset channels into common acp configuration

--- a/Source/SA/RFmx SpecAn/RFmxSpecAn.csproj
+++ b/Source/SA/RFmx SpecAn/RFmxSpecAn.csproj
@@ -49,5 +49,11 @@
     <Compile Include="RFmxSpecAn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\SG\SG.csproj">
+      <Project>{89abcac5-cedb-4535-bd58-e205a97834d9}</Project>
+      <Name>SG</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
