Moved Waveform struct to common library and updated all dependent modules

--- a/Source/SA/RFmx SpecAn/RFmxSpecAn.csproj
+++ b/Source/SA/RFmx SpecAn/RFmxSpecAn.csproj
@@ -52,9 +52,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\SG\SG.csproj">
-      <Project>{89abcac5-cedb-4535-bd58-e205a97834d9}</Project>
-      <Name>SG</Name>
+    <ProjectReference Include="..\..\Common\Common.csproj">
+      <Project>{8e7d5092-b685-4ad3-9da3-7c53e56f0f32}</Project>
+      <Name>Common</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
