--- a/Examples/dEVM with Digital PAEN Control/dEVM with Digital PAEN Control/dEVM with Digital PAEN Control.csproj
+++ b/Examples/dEVM with Digital PAEN Control/dEVM with Digital PAEN Control/dEVM with Digital PAEN Control.csproj
@@ -99,6 +99,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Source\Common\Common.csproj">
+      <Project>{8e7d5092-b685-4ad3-9da3-7c53e56f0f32}</Project>
+      <Name>Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\Source\Digital\Digital.csproj">
       <Project>{a12f87e8-772d-4dd9-9ae1-e6a72e83f4fe}</Project>
       <Name>Digital</Name>
